// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HierarchicalLocationsView /> displays a single location when complete 1`] = `
<div
  className="hierarchical-locations-wrapper"
>
  <div
    className="hierarchical-locations-view "
  >
    <div
      className="file-locations hierarchical-locations-view__content"
    >
      <div>
        <VisibilitySensor
          onChange={[Function]}
          partialVisibility={true}
        >
          <div
            className="test-search-result result-container"
            data-testid="result-container"
          >
            <div
              className="result-container__header result-container__header--collapsible"
              onClick={[Function]}
            >
              <SourceRepositoryIcon
                className="icon-inline"
              />
              <div
                className="result-container__header-title test-search-result-label"
                data-testid="result-container-header"
              >
                <span
                  onClick={[Function]}
                >
                  <a
                    href="/github.com/foo/bar"
                  >
                    foo/bar
                  </a>
                   ›
                   
                  <a
                    href="/github.com/foo/bar/-/blob/undefined?subtree=true"
                  >
                    <strong>
                      
                    </strong>
                  </a>
                </span>
              </div>
              <small
                className="result-container__toggle-matches-container"
              >
                <svg
                  className="mdi-icon icon-inline"
                  fill="currentColor"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
              </small>
            </div>
            <div
              className="file-match-children"
            >
              <div
                className="file-match-children__item-code-wrapper test-file-match-children-item-wrapper"
              >
                <a
                  className="file-match-children__item file-match-children__item-clickable test-file-match-children-item"
                  href="/github.com/foo/bar/-/blob/undefined?subtree=true#L2:1"
                  onClick={[Function]}
                >
                  <VisibilitySensor
                    offset={
                      Object {
                        "bottom": -500,
                      }
                    }
                    onChange={[Function]}
                    partialVisibility={true}
                  >
                    <code
                      className="code-excerpt file-match-children__item-code-excerpt"
                    >
                      <table>
                        <tbody>
                          <tr>
                            <td
                              className="line"
                            >
                              1
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              2
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              3
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </code>
                  </VisibilitySensor>
                </a>
                <div
                  className="file-match-children__item-badge-row test-badge-row"
                />
              </div>
            </div>
          </div>
        </VisibilitySensor>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HierarchicalLocationsView /> displays multiple locations grouped by file 1`] = `
<div
  className="hierarchical-locations-wrapper"
>
  <div
    className="hierarchical-locations-view "
  >
    <div
      className="resizable resizable--right hierarchical-locations-view__resizable"
      style={
        Object {
          "width": "200px",
        }
      }
    >
      <div
        className="list-group list-group-flush hierarchical-locations-view__list test-hierarchical-locations-view-list"
      >
        <span
          className="list-group-item hierarchical-locations-view__item active"
          onClick={[Function]}
        >
          <span
            className="hierarchical-locations-view__item-name"
            title="file1.txt"
          >
            <span
              className="hierarchical-locations-view__item-name-text"
            >
              <span
                className=""
              >
                 
                <span>
                  file1.txt
                </span>
              </span>
            </span>
          </span>
          <span
            className="badge badge-secondary badge-pill hierarchical-locations-view__item-badge"
          >
            2
          </span>
        </span>
        <span
          className="list-group-item hierarchical-locations-view__item "
          onClick={[Function]}
        >
          <span
            className="hierarchical-locations-view__item-name"
            title="file2.txt"
          >
            <span
              className="hierarchical-locations-view__item-name-text"
            >
              <span
                className=""
              >
                 
                <span>
                  file2.txt
                </span>
              </span>
            </span>
          </span>
          <span
            className="badge badge-secondary badge-pill hierarchical-locations-view__item-badge"
          >
            3
          </span>
        </span>
      </div>
      <div
        className="resizable__handle resizable__handle--right "
        onMouseDown={[Function]}
      />
    </div>
    <div
      className="file-locations hierarchical-locations-view__content"
    >
      <div>
        <VisibilitySensor
          onChange={[Function]}
          partialVisibility={true}
        >
          <div
            className="test-search-result result-container"
            data-testid="result-container"
          >
            <div
              className="result-container__header result-container__header--collapsible"
              onClick={[Function]}
            >
              <SourceRepositoryIcon
                className="icon-inline"
              />
              <div
                className="result-container__header-title test-search-result-label"
                data-testid="result-container-header"
              >
                <span
                  onClick={[Function]}
                >
                  <a
                    href="/github.com/foo/bar"
                  >
                    foo/bar
                  </a>
                   ›
                   
                  <a
                    href="/github.com/foo/bar/-/blob/file1.txt?subtree=true"
                  >
                    <strong>
                      file1.txt
                    </strong>
                  </a>
                </span>
              </div>
              <small
                className="result-container__toggle-matches-container"
              >
                <svg
                  className="mdi-icon icon-inline"
                  fill="currentColor"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
              </small>
            </div>
            <div
              className="file-match-children"
            >
              <div
                className="file-match-children__item-code-wrapper test-file-match-children-item-wrapper"
              >
                <a
                  className="file-match-children__item file-match-children__item-clickable test-file-match-children-item"
                  href="/github.com/foo/bar/-/blob/file1.txt?subtree=true#L2:1"
                  onClick={[Function]}
                >
                  <VisibilitySensor
                    offset={
                      Object {
                        "bottom": -500,
                      }
                    }
                    onChange={[Function]}
                    partialVisibility={true}
                  >
                    <code
                      className="code-excerpt file-match-children__item-code-excerpt"
                    >
                      <table>
                        <tbody>
                          <tr>
                            <td
                              className="line"
                            >
                              1
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              2
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              3
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              4
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              5
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </code>
                  </VisibilitySensor>
                </a>
                <div
                  className="file-match-children__item-badge-row test-badge-row"
                />
              </div>
            </div>
          </div>
        </VisibilitySensor>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HierarchicalLocationsView /> displays partial locations before complete 1`] = `
<div
  className="hierarchical-locations-wrapper"
>
  <div
    className="hierarchical-locations-view "
  >
    <div
      className="file-locations hierarchical-locations-view__content"
    >
      <div>
        <VisibilitySensor
          onChange={[Function]}
          partialVisibility={true}
        >
          <div
            className="test-search-result result-container"
            data-testid="result-container"
          >
            <div
              className="result-container__header result-container__header--collapsible"
              onClick={[Function]}
            >
              <SourceRepositoryIcon
                className="icon-inline"
              />
              <div
                className="result-container__header-title test-search-result-label"
                data-testid="result-container-header"
              >
                <span
                  onClick={[Function]}
                >
                  <a
                    href="/github.com/foo/bar"
                  >
                    foo/bar
                  </a>
                   ›
                   
                  <a
                    href="/github.com/foo/bar/-/blob/undefined?subtree=true"
                  >
                    <strong>
                      
                    </strong>
                  </a>
                </span>
              </div>
              <small
                className="result-container__toggle-matches-container"
              >
                <svg
                  className="mdi-icon icon-inline"
                  fill="currentColor"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
              </small>
            </div>
            <div
              className="file-match-children"
            >
              <div
                className="file-match-children__item-code-wrapper test-file-match-children-item-wrapper"
              >
                <a
                  className="file-match-children__item file-match-children__item-clickable test-file-match-children-item"
                  href="/github.com/foo/bar/-/blob/undefined?subtree=true#L2:1"
                  onClick={[Function]}
                >
                  <VisibilitySensor
                    offset={
                      Object {
                        "bottom": -500,
                      }
                    }
                    onChange={[Function]}
                    partialVisibility={true}
                  >
                    <code
                      className="code-excerpt file-match-children__item-code-excerpt"
                    >
                      <table>
                        <tbody>
                          <tr>
                            <td
                              className="line"
                            >
                              1
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              2
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              className="line"
                            >
                              3
                            </td>
                            <td
                              className="code"
                            >
                               
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </code>
                  </VisibilitySensor>
                </a>
                <div
                  className="file-match-children__item-badge-row test-badge-row"
                />
              </div>
            </div>
          </div>
        </VisibilitySensor>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HierarchicalLocationsView /> shows a spinner before any locations emissions 1`] = `
<div
  className="loading-spinner icon-inline m-1 test-loading-spinner"
/>
`;

exports[`<HierarchicalLocationsView /> shows a spinner if locations emits empty and is not complete 1`] = `
<div
  className="loading-spinner icon-inline m-1 test-loading-spinner"
/>
`;
